fix images path

--- a/src/App.css
+++ b/src/App.css
@@ -242,7 +242,7 @@ body {
 }
 
 .card-bg-image {
-  background-image: url(/public/images/property.jpg);
+  background-image: url(accesst/images/property.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -276,12 +276,12 @@ body {
 
 /* home caruosel */
 .carousel .carousel-control-prev-icon {
-  background-image: url("/public/images/carousel-left.png");
+  background-image: url("./accesst/images/carousel-left.png");
   opacity: 1;
 }
 
 .carousel .carousel-control-next-icon {
-  background-image: url("/public/images/carousel-right.png");
+  background-image: url("./accesst/images/carousel-right.png");
 }
 
 .carousel-control-next {
